--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,11 @@
 *, *::before, *::after {
   box-sizing: inherit;
   margin: auto;
-  padding: 0;
 }
 
 body {
   font-weight: bold;
-  margin: 10px 0;
+  margin: 0;
 }
 
 html {
